log
Sun 16 Oct 2022 11:20:17 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: conversion to non-scalar type requested
   36 |   Heap * new = (Heap )malloc(sizeof(Heap));
      |   ^~~~
Compilation failed
4149231
Sun 16 Oct 2022 11:20:20 PM UTC: 
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: conversion to non-scalar type requested
   36 |   Heap * new = (Heap )malloc(sizeof(Heap));
      |   ^~~~
Compilation failed
be8a750
Sun 16 Oct 2022 11:20:21 PM UTC: 
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: conversion to non-scalar type requested
   36 |   Heap * new = (Heap )malloc(sizeof(Heap));
      |   ^~~~
Compilation failed
fda6d92
Sun 16 Oct 2022 11:20:36 PM UTC: 
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: conversion to non-scalar type requested
   36 |   Heap * new = (Heap )malloc(sizeof(Heap));
      |   ^~~~
Compilation failed
f98413f
Sun 16 Oct 2022 11:20:37 PM UTC: 
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: conversion to non-scalar type requested
   36 |   Heap * new = (Heap )malloc(sizeof(Heap));
      |   ^~~~
Compilation failed
7000e65
Sun 16 Oct 2022 11:20:55 PM UTC: 
 heap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:3: error: ‘i’ is used uninitialized in this function [-Werror=uninitialized]
   40 |   for(int i ; i < new->capac ; i++)
      |   ^~~
cc1: all warnings being treated as errors
Compilation failed
698f161
Sun 16 Oct 2022 11:20:58 PM UTC: 
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:3: error: ‘i’ is used uninitialized in this function [-Werror=uninitialized]
   40 |   for(int i ; i < new->capac ; i++)
      |   ^~~
cc1: all warnings being treated as errors
Compilation failed
122e87a
Sun 16 Oct 2022 11:21:06 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
test.c: In function ‘createHeap’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b3e5660
Sun 16 Oct 2022 11:21:26 PM UTC: 
test.c: In function ‘createHeap’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f37d58c
